catkin_ws/logs/backend/build.make.1098.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:286:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints3D().size();i++)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:292:50: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i< frame.getKeypoints().size();i++)
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:300:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:326:25: error: no matching function for call to ‘imshow(const cv::Mat&)’
    imshow(frame.getRgb());
                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:326:25: note: candidates are:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:12:0:
/opt/opencv3/include/opencv2/highgui.hpp:488:17: note: void cv::imshow(const cv::String&, const cv::ogl::Texture2D&)
 CV_EXPORTS void imshow(const String& winname, const ogl::Texture2D& tex);
                 ^
/opt/opencv3/include/opencv2/highgui.hpp:488:17: note:   candidate expects 2 arguments, 1 provided
/opt/opencv3/include/opencv2/highgui.hpp:305:19: note: void cv::imshow(const cv::String&, cv::InputArray)
 CV_EXPORTS_W void imshow(const String& winname, InputArray mat);
                   ^
/opt/opencv3/include/opencv2/highgui.hpp:305:19: note:   candidate expects 2 arguments, 1 provided
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
